<resources>
    <string name="app_name">My Beer Collection</string>
    <string name="ajuda">Ajuda</string>
    <string name="sobre">Sobre</string>
    <string name="nome">Nome</string>
    <string name="tipo">Tipo</string>
    <string name="ale">Ale</string>
    <string name="lager">Lager</string>
    <string name="estilo">Estilo</string>
    <string name="abv">Abv%</string>
    <string name="anotacao">Notas e Impressão</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="favorito">Favorito</string>
    <string name="camera">Camera</string>
    <string name="apresentacao">O App My Beer Collection, foi desenvolvido pelo estudande de Analise e Desenvolvimento
        de Sistemas, Fausto Mefistófeles, criador e apreciador de cervejas artesanais e autor do perfil do Instagram e
        Facebook Cozinha Brewer. O app tem como objetivo realizar o registro das cervejas degustadas, onde o usuário
        pode
        registrar suas observações e imagem da cerveja apreciada.
    </string>
    <string name="face">Face</string>
    <string name="insta">Insta</string>
    <string name="mnExcluir">Excluir</string>
</resources>
