<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/mnCamera"
          android:title="@string/camera"
          android:icon="@android:drawable/ic_menu_camera"
          android:visible="true"
          android:iconTint="#ababab"
          app:showAsAction="always"/>

    <item android:id="@+id/mnSalvar"
          android:title="@string/salvar"
          android:icon="@android:drawable/ic_menu_save"
          android:visible="true"
          android:iconTint="#ababab"
          app:showAsAction="always"/>


    <item android:id="@+id/mnExcluir"
          android:title="@string/excluir"
          android:icon="@android:drawable/ic_menu_delete"
          android:checkable="false"
          android:iconTint="#ababab"
          app:showAsAction="always"/>
</menu>