<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AddActivity">

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent" android:minWidth="385dp"
                                                 android:minHeight="510dp">


        <RadioGroup
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                android:id="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/txtTipo" android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0.08">
            <RadioButton
                    android:text="@string/ale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rdAle"
                    android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/lager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/rdLager" android:layout_weight="1"/>
        </RadioGroup>
        <TextView
                android:text="@string/tipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtTipo"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0" android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtNome"
                android:hint="@string/nome"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/txtEstilo"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/estilo" android:textAllCaps="false" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtNome"/>
        <TextView
                android:text="@string/abv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtAbv"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.024" android:textSize="14sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtEstilo"/>
        <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/sbAbv"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:max="200" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtAbv"
                android:progress="30"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/txtAnotacao"
                android:hint="@string/anotacao"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/sbAbv"/>
        <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rtbNota"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:numStars="5"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtAnotacao"
        />
        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content" tools:srcCompat="@tools:sample/backgrounds/scenic[12]"
                android:id="@+id/imgBeer"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/rtbNota"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>

